fixed maven plugin issue, added dto for auth controller with pointer issues